This version has increased contrast between the hero image and the hero text for better visibility and the lorum ipsum text has been replaced. The mobile view has been altered to prevent stetching of the hero image.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,16 @@
     color:#F9F8F6;
 }
 
+/*-------- Headers ---------*/
+
+.h1_header{
+    margin: 20px 0px;
+}
+
+.h2_header{
+    margin: 20px 0px;
+}
+
 /*-------- Line Breaks ---------*/
 .short-hr{
     width:200px;
@@ -39,13 +49,25 @@
 }
 /*-------- Index Page ----------*/
 .hero-container{
-    height: 55vh;
     position: relative;
+    height:55vh;
+    object-fit: cover;
+}
+
+.hero-container:after {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
 }
 
 #hero-img{
     height:100%;
     width:100%;
+
 }
 
 .hero-text{
@@ -56,7 +78,7 @@
     z-index:1;
     font-size:24px;
     overflow:hidden;
-    max-width: 500px;
+    max-width: 550px;
     color:white;
     margin: 0 auto;
     font-weight: bold;
@@ -257,6 +279,28 @@
     .modules_button{
         width: 100px;
         height:50px;
+    }
+
+    .hero-container{
+        height:200px;
+    }
+
+    .h1_header{
+        margin:0;
+        font-size: 32px;
+    }
+
+    .hero-text{
+        font-size: 22px;
+        top:15%
+    }
+    
+    .call-to-action{
+        width:120px;
+        height:50px;
+        border-radius:33%;
+        padding-top: 12px;
+        font-size: 18px;
     }
 
     .module_button_container{
